[project]
name = "hab_detection_wyvern_hsi_dag"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.5",
    "geopandas>=1.0.1",
    "numpy>=2.0.2",
    "pillow>=11.3.0",
    "pystac-client>=0.8.3",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "shapely>=2.0.7",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hab_detection_wyvern_hsi_dag"
registry_modules = [
    "hab_detection_wyvern_hsi_dag.components.*",
]


